Limpeza e organização completa do projeto: estrutura otimizada, arquivos redundantes removidos, scripts úteis adicionados, documentação atualizada.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,13 @@
             </div>
         </header>
 
+        <!-- Navigation -->
+        <div style="background: white; padding: 15px; border-radius: 8px; margin-bottom: 20px; text-align: center;">
+            <a href="/static/data-viewer.html" style="color: #667eea; text-decoration: none; font-weight: 600; font-size: 16px;">
+                📊 Ver Análise de Dados em Lote por Município →
+            </a>
+        </div>
+
         <!-- Main Content -->
         <main class="main-content">
             <!-- Form Section -->
